# MoBI-Neon-GUI

./: README.md  main.py  pyproject.toml
src/neon_gui/: __init__.py  gui.py  neon_recorder.py
