[project]
name = "neon-gui"
version = "0.1.0"
description = "A GUI application for recording video from Pupil Labs Neon devices with synchronized LSL markers"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.5.0",
    "pupil-labs-realtime-api>=1.0.0",
    "pylsl>=1.13.0",
    "pyqt6>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.1",
    "deptry>=0.23.0"
]

[project.scripts]
neon-gui = "neon_gui.gui:main"
mobi-neon = "neon_gui.gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in `__init__`
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
